--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.13.3",
     "google-generativeai>=0.8.4",
     "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
 ]
